# FCND-Controls-CPP

./: .gitignore  CMakeLists.txt  README.md  writeup.md
config/: 1_Intro.txt  2_AttitudeControl.txt  3_PositionControl.txt  4_Nonidealities.txt  5_TrajectoryFollow.txt  Config.txt  Controller.txt  ControllerParams.txt  P2_0_Demo.txt  P2_0_Intro.txt  P2_1_Attitude.txt  P2_2_3DHover.txt  P2_2_PlanarXZ.txt  P2_3_3DHover.txt  P2_3_MultiHover.txt  P2_4_3DCircle.txt  P2_5_Multi3DCircle.txt  QuadControlParams.txt  QuadPhysicalParams.txt  Scenarios.txt  Simulation.txt  X_Scenarios.txt  X_TestManyQuads.txt  X_TestMavlink.txt
config/traj/: CircleNoFF.txt  FigureEight.txt  FigureEightFF.txt  HelixNoFF.txt  HelixUpDownNoFF.txt  MakeCircleTrajectory.py  MakeHelixTrajectory.py  MakeHelixUpDownTrajectory.py  MakePeriodicTrajectory.py  MakeSpiralTrajectory.py  Origin.txt  SpiralNoFF.txt
lib/matrix/: Matrix.hpp
lib/mavlink/: mavlink_conversions.h
project/: CPPSim.pro  Simulator.sln  Simulator.vcxproj  Simulator.vcxproj.filters  simpoc.pro
project/FCND-CPPSim.xcodeproj/: project.pbxproj
references/: Drone_control-2.txt
src/: AttitudeController.h  BaseController.cpp  BaseController.h  Common.h  ControllerFactory.h  DataSource.h  FullCascadedController.h  QuadControl.cpp  QuadControl.h  SandboxController.h  SimpleAttitudeController.h  Trajectory.cpp  Trajectory.h  VehicleDatatypes.h  main.cpp
src/Drawing/: AbsThreshold.h  BaseAnalyzer.h  ColorUtils.cpp  ColorUtils.h  DrawingFuncs.cpp  DrawingFuncs.h  GLUTMenu.cpp  GLUTMenu.h  Graph.cpp  Graph.h  GraphManager.cpp  GraphManager.h  Visualizer_GLUT.cpp  Visualizer_GLUT.h  WindowThreshold.h
src/Math/: Angles.h  Constants.h  Geometry.cpp  Geometry.h  LowPassFilter.h  Mat3x3D.h  Mat3x3F.h  MathUtils.h  Quaternion.h  Random.cpp  Random.h  Transform3D.h  V3D.h  V3F.h  V4D.h
src/MavlinkNode/: MavlinkNode.cpp  MavlinkNode.h  MavlinkTranslation.cpp  MavlinkTranslation.h  PracticalSocket.cpp  PracticalSocket.h  UDPPacket.h
src/Simulation/: BaseDynamics.cpp  BaseDynamics.h  QuadDynamics.cpp  QuadDynamics.h  Simulator.cpp  Simulator.h  magnetometer.cpp  magnetometer.h  opticalflow.cpp  opticalflow.h  rangefinder.cpp  rangefinder.h
src/Utility/: Camera.cpp  Camera.h  FastDelegate.h  FixedQueue.h  Mutex.h  SimpleConfig.cpp  SimpleConfig.h  StringUtils.h  Timer.cpp  Timer.h
writeup/: debugging.md
(+1 files in other folders)
